--- a/android_dev_ni_sample/res/layout/main.xml
+++ b/android_dev_ni_sample/res/layout/main.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
 
-    <LinearLayout android:orientation="vertical"
-                  android:layout_width="fill_parent"
-                  android:layout_height="wrap_content"
-            >
-        <Button android:id="@+id/btn_load"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="CARGAR"
-                android:layout_marginBottom="12dp"
-                />
-        <TextView
-                android:id="@+id/tv_result"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                />
-    </LinearLayout>
-</ScrollView>
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        >
+    <Button android:id="@+id/btn_load"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/load"
+            android:layout_marginBottom="12dp"
+            />
+    <ListView
+            android:id="@+id/lv_data"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+</LinearLayout>
+
